# wellnote_downloader

./: .gitignore  .style.yapf  CONTRIBUTING.md  LICENSE  README.md  setup.cfg
src/: wellnote_downloader.py
src/wellnote_downloader/: __init__.py
