[metadata]
name = wellnote-downloader
version = 0.3.2
author = Takahide Nogayama
author_email = nogayama@gmail.com
description = Wellnote downloader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nogayama/wellnote_downloader
project_urls =
    Bug Tracker = https://github.com/nogayama/wellnote_downloader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires = 
    selenium
    webdriver-manager


package_dir =
    = src
packages = find:
python_requires = >=3.6

# py_modules = ['wellnote_downloader']

[options.extras_require]  # in setup.cfg
test =
    uspec
    PyHamcrest

#scripts =
#    scripts/dw
[options.entry_points]
console_scripts =
    wellnote_downloader = wellnote_downloader:main_cli

[options.packages.find]
where = src
